<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appname">KeepShare</string>
    <string name="search_suggest_intent_data">content://com.hanhuy.android.keepshare/entry</string>
    <string name="search_suggest_authority">com.hanhuy.android.keepshare</string>
    <string name="setup_header">
        Enter your KeePass database unlocking information to get started</string>
    <string name="setup_instructions">To
        start using <i>KeepShare</i> enter the paths to your KeePass
        database and keyfile, if set. You will also need to
        save your database password.
        All information is <b>securely encrypted</b> using two
        secret keys, one stored in the cloud using your <i>Google Drive</i>
        storage and another saved locally. Your password is never accessible
        without having both keys present. A hacker that steals your Google
        Drive key will be unable to access your password that is saved
        on-device, and someone that is able to steal your device data will be
        unable to decrypt your master password without the secret key saved
        in Google Drive.
    </string>
    <string name="connect_instructions">Get started with
        binding <i>KeepShare</i>
        to <i>Google Drive</i> by pressing the <b>Connect</b> button. This
        will initialize your secret key in the cloud if it has not already
        been setup. You will be prompted to grant access for storing private
        application data.
    </string>
    <string name="overview"><i>KeepShare</i> is an easy way to make
        your passwords immediately available no matter which application
        you are running. Request access to passwords by choosing
        to <b>Share</b> with <i>KeepShare</i> from the application you are
        currently running. A notification or dialog will appear to let you
        select usernames and passwords and allow exporting them to the
        clipboard.
    </string>
    <string name="request_again">Ask Again</string>
    <string name="fingerprint_unrecognized">Fingerprint is unrecognized</string>
    <string name="fingerprint_accepted">Fingerprint accepted</string>
    <string name="add_permission">Add Permission</string>
    <string name="camera_permission">Camera access is needed to scan barcodes</string>
    <string name="scanning_for_otp">Scanning for OTP setup codes…</string>
    <string name="require_external_storage">Storage access is required to work with your KeePass database</string>
    <string name="require_get_accounts">Contacts access is required to discover your Google ID for database protection</string>
    <string name="form_fill_notif_text">Tap to find passwords for: %s</string>
    <string name="form_fill_notif_title">%s: search for passwords to fill</string>
    <string name="pin_holder_notif_text">Database closing in %s</string>
    <string name="pin_holder_notif_title">%s: database open</string>
    <string name="toast_unable_load_key">Unable to load key from Google Drive, retrying: %s</string>
    <string name="clear_user_data">Clear user data</string>
    <string name="filename_hint">filename…</string>
    <string name="browse">Browse</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_match">does not match</string>
    <string name="database_password">Database Password</string>
    <string name="password">Password</string>
    <string name="passwords">Passwords</string>
    <string name="password_min_length">must be at least 8 characters long</string>
    <string name="password_reminder_note">
        This entry is here to remind you of the password set for this database when it was created. Feel free to
        delete this entry if it is no longer needed. Any changes to this entry will not affect the rest of the database.
    </string>
    <string name="minimum_length">Password Length: %d</string>
    <string name="minimum_uppercase">Minimum Uppercase: %d</string>
    <string name="minimum_numbers">Minimum Numbers: %d</string>
    <string name="minimum_symbols">Minimum Symbols: %d</string>
    <string name="lowercase_enable">Lowercase (a-z)</string>
    <string name="uppercase_enable">Uppercase (A-Z)</string>
    <string name="numbers_enable">Numbers (0–9)</string>
    <string name="symbols_enable">Symbols (!@#$%^&amp;*+=?/\)</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_hint">database password…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="unable_to_generate_password">UNABLE TO GENERATE</string>
    <string name="key_file">Key file</string>
    <string name="connect">Connect</string>
    <string name="database">Database</string>
    <string name="save">Save</string>
    <string name="settings_saved">Database setup complete!</string>
    <string name="keepass_no_respond">KeePass provider did not respond</string>
    <string name="keyfile_no_exist">Key file does not exist!</string>
    <string name="password_no_blank">Password cannot be blank</string>
    <string name="database_new_file">KeepShare Database.kdbx</string>
    <string name="database_no_exist">Database file does not exist!</string>
    <string name="database_no_blank">Database cannot be blank</string>
    <string name="decrypt_saved_failed">Failed to decrypt saved data :-(</string>
    <string name="android_saf_required">
        Android Storage Access Framework Documents application is required</string>
    <string name="must_install_explorer">
        You must install a file explorer in order to browse</string>
    <string name="setup_subtitle">: Settings</string>
    <string name="setup_pin_subtitle">: Setup PIN</string>
    <string name="enter_pin_subtitle">: Enter PIN</string>
    <string name="ready_to_use">Ready to use!</string>
    <string name="keepassdroid_not_installed">KeePassDroid is not installed</string>
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
    <string name="loading_key">Loading Key…</string>
    <string name="loading_database">Reading Database…</string>
    <string name="saving_database">Saving Database…</string>
    <string name="please_wait">Please wait</string>
    <string name="screenshot">screenshot</string>
    <string name="not_a_url">Not a URL</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="discard_confirm">Are you sure you want to discard these changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="continu">Continue</string>
    <string name="copy_username">Username</string>
    <string name="copy_password">Password</string>
    <string name="delete_name">Delete %s?</string>
    <string name="delete_entry">Deleted %s</string>
    <string name="undo">Undo</string>
    <string name="create_database">Create New Database</string>
    <string name="create">Create</string>
    <string name="move_to_recycle">It can be found in the recycle bin later if you change your mind</string>
    <string name="delete_permanently">It will be permanently deleted</string>
    <string name="failed_authentication">Database authentication failed</string>
    <string name="failed_verify">
        Failed to verify encrypted data, run setup!</string>
    <string name="failed_to_open">Failed to open database: </string>
    <string name="credentials_available">
        Credentials are available for input</string>
    <string name="invalid_token">Invalid KeepShare</string>
    <string name="keyboard_timeout">Keyboard Timeout (secs)</string>
    <string name="service_timeout">PIN unlock timeout (mins)</string>
    <string name="select_entry_prompt">Select an entry to continue:</string>
    <string name="copied_username">Username copied to clipboard!</string>
    <string name="copied_password">Password copied to clipboard!</string>
    <string name="no_passwords_selected">No passwords selected</string>
    <string name="no_password_input">
        Cannot enter password on a non-password input</string>
    <string name="no_password_input_override">
        Cannot enter password on a non-password input; long-press to override
    </string>
    <string name="override_password_input">Overriding password input</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="keyboard_status">Enable custom keyboard</string>
    <string name="enable_password_override">Enable override for non-password
        inputs
    </string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="search_usernames_passwords">Search usernames and passwords
    </string>
    <string name="no_search_results">No search results</string>
    <string name="searching">Searching…</string>
    <string name="running_search">Running your search</string>
    <string name="no_search_query">No search query</string>
    <string name="setup">Settings</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="setup_pin_summary">Unlock KeepShare using a PIN for added security</string>
    <string name="change_pin">Change PIN</string>
    <string name="pin_at_least_4">PIN must be at least 4 digits</string>
    <string name="select_pin">Select a PIN</string>
    <string name="confirm_pin">Confirm selected PIN</string>
    <string name="try_again">Try again</string>
    <string name="no_more_tries">Goodbye</string>
    <string name="pin_unlock_required">: PIN unlock required</string>
    <string name="has_not_configured">Is not ready to use, tap to setup</string>
    <string name="has_been_configured">Is configured and ready to use</string>
    <string name="confirm_clear_data">
        Are you sure you want to clear your configuration?</string>
    <string name="setup_required_for_pin">
        You must complete your configuration before setting a PIN</string>
    <string name="verify_pin">Verify your PIN</string>
    <string name="fetching_key">Retrieving key from Google Drive</string>
    <string name="key_changed_clear_data">Key data in Google Drive has changed, clear data and try again</string>
    <string name="ime_search_title">: No password entries loaded</string>
    <string name="ime_search_prompt">Would you like to search for \'%s\'?</string>
    <string name="keyboard_not_enabled_title">
        KeepShare keyboard is not enabled</string>
    <string name="keyboard_not_enabled_prompt">
        Would you like to enable KeepShare\'s keyboard now?</string>
    <string name="no_logins_found">No logins found</string>
    <string name="accessibility_service_label">KeepShare Form Filler</string>
    <string name="accessibility_service_description">
        Username and password form filling service. Automatically pulls data
        from your KeePass database to fill credential forms.
    </string>
    <string-array name="keyboard_timeouts">
        <item>60</item>
        <item>45</item>
        <item>30</item>
        <item>15</item>
    </string-array>
    <string-array name="pin_timeouts">
        <item>60</item>
        <item>15</item>
        <item>5</item>
        <item>1</item>
    </string-array>
</resources>
