<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/flipper"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:background="@android:drawable/picture_frame"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
                android:id="@+id/setup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/setup_header"
                />
        <TextView
                android:id="@+id/label1"
                android:layout_width="90dp"
                android:layout_alignBottom="@+id/file_name"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/database"
                />
        <EditText
                android:layout_toRightOf="@+id/label1"
                android:layout_below="@+id/setup_text"
                android:layout_marginBottom="8dp"
                android:id="@+id/file_name"
                android:inputType="textUri"
                android:singleLine="true"
                android:layout_toLeftOf="@+id/browse_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/filename_hint"
                />
        <Button android:id="@+id/browse_database"
                android:layout_alignBottom="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/browse"
                />
        <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/password"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                />
        <EditText
                android:id="@+id/password"
                android:layout_below="@+id/file_name"
                android:layout_marginBottom="8dp"
                android:password="true"
                android:singleLine="true"
                android:layout_toRightOf="@+id/label1"
                android:layout_toLeftOf="@+id/browse_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                />
        <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/key_file_name"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/key_file"
                />
        <EditText
                android:id="@+id/key_file_name"
                android:layout_marginBottom="8dp"
                android:layout_toRightOf="@+id/label1"
                android:layout_toLeftOf="@+id/browse_keyfile"
                android:layout_below="@+id/password"
                android:inputType="textUri"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/filename_hint"
                />
        <Button android:id="@+id/browse_keyfile"
                android:layout_alignBottom="@+id/key_file_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/browse"
                />
        <TextView
                android:visibility="gone"
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/save"
                android:textColor="#ff0000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"/>
        <TextView
                android:visibility="gone"
                android:id="@+id/success_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/save"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"/>
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:id="@+id/progress2"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/save"
                />
        <Button
                android:id="@+id/save"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                android:layout_gravity="center"
                android:minWidth="180dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/connect"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/overview"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/setup_instructions"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/connect_instructions"
                        />
            </LinearLayout>
        </ScrollView>
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/connect"
                />
        <Button
                android:id="@+id/connect"
                android:text="@string/connect"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:minWidth="180dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</ViewFlipper>
